--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>அகிலம் நண்பர்கள் அறக்கட்டளை | Akilam Nanbargal Arakkattalai</title>
     <meta
       name="description"
-      content="அகிலம் நண்பர்கள் அறக்கட்டளை – சமூக சேவைகள், இரத்த தானம், கல்வி உதவி, ஆதரவற்றோர் நலனுக்கான தொண்டு அமைப்பு. Join us to make a difference in society."
+      content="அகிலம் நண்பர்கள் அறக்கட்டளை – அன்றும் இன்றும் என்றும் இந்த மண்ணிற்காகவும், மக்களுக்காகவும் தொடர்ந்து சமூக பணியில் ஈடுபட்டு வருகிறது. நமது அமைப்போடு இணைந்து நீங்களும் சமூக மாற்றத்திற்காக செயல்படலாம் ,அல்லது உங்களை சார்ந்து ஏழை எளியோருக்கான உதவி பெறலாம்! - சமூக சேவைகள், இரத்த தானம், கல்வி உதவி, ஆதரவற்றோர் நலனுக்கான தொண்டு அமைப்பு. Join us to make a difference in society."
     />
     <meta
       name="keywords"
@@ -26,7 +26,7 @@
     <meta property="og:title" content="அகிலம் நண்பர்கள் அறக்கட்டளை | Akilam Nanbargal Arakkattalai" />
     <meta
       property="og:description"
-      content="சமூக சேவைகள், இரத்த தானம், கல்வி உதவி மற்றும் மனிதநேயம் நிறைந்த தொண்டு செய்கைகள்."
+      content="அன்றும் இன்றும் என்றும் இந்த மண்ணிற்காகவும், மக்களுக்காகவும் தொடர்ந்து சமூக பணியில் ஈடுபட்டு வருகிறது. நமது அமைப்போடு இணைந்து நீங்களும் சமூக மாற்றத்திற்காக செயல்படலாம் ,அல்லது உங்களை சார்ந்து ஏழை எளியோருக்கான உதவி பெறலாம்!"
     />
     <meta
       property="og:image"
@@ -84,7 +84,8 @@
           "https://www.facebook.com/akilamnanbargal",
           "https://www.instagram.com/akilamnanbargal"
         ],
-        "description": "அகிலம் நண்பர்கள் அறக்கட்டளை – சமூக சேவைகள், இரத்த தானம், கல்வி உதவி, ஆதரவற்றோர் நலனுக்கான தொண்டு அமைப்பு.",
+        "description": "அகிலம் நண்பர்கள் அறக்கட்டளை – அன்றும் இன்றும் என்றும் இந்த மண்ணிற்காகவும், மக்களுக்காகவும் தொடர்ந்து சமூக பணியில் ஈடுபட்டு வருகிறது. நமது அமைப்போடு இணைந்து நீங்களும் சமூக மாற்றத்திற்காக செயல்படலாம் ,அல்லது உங்களை சார்ந்து ஏழை எளியோருக்கான உதவி பெறலாம்!
+     சமூக சேவைகள், இரத்த தானம், கல்வி உதவி, ஆதரவற்றோர் நலனுக்கான தொண்டு அமைப்பு.",
         "founder": {
           "@type": "Person",
           "name": "Thiru D. Ari Akilan"
